Investment calculations on models

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -29,4 +29,6 @@ en:
   better: "better"
   worser: "worser"
   and: "and"
+  and_probably: "and it's probable that"
   you_have_invested: "You invest"
+  currency_ru: "rub."
