--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -23,10 +23,12 @@ ru:
   calculator_title: "Калькулятор инвестора"
   if_we_go_as_planned: "Если все пойдет по плану"
   you_will_get: "вы заработаете"
-  by_planned_interest_rate: "по запланированной ставке"
+  by_planned_interest_rate: "по плановой ставке"
   by_real_intrest_rate: "по актуальной ставке"
-  but_now_things_going: "Но сейчас дела идут "
+  but_now_things_going: "Cейчас дела идут "
   better: "лучше"
   worser: "хуже"
   and: "и"
+  and_probably: "и, вероятно, что"
   you_have_invested: "Вы инвестируете"
+  currency_ru: "руб."
